# plotting-style

./: CLAUDE.md  README.md  pyproject.toml
examples/: basic_figure.py  journal_widths.py  line_plot.py  multi_panel.py
journal_style/: __init__.py
