[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "journal-style"
version = "0.1.0"
description = "Reusable matplotlib style helpers for publication-ready figures"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
demo = [
    "pandas",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["journal_style*"]
